use icons for custom creation controls

--- a/src/styles/ControlBar.css
+++ b/src/styles/ControlBar.css
@@ -110,3 +110,7 @@
 #installIcon {
   background-image: url("../images/icons/install.svg");
 }
+
+#playIcon {
+  background-image: url("../images/icons/play.svg");
+}
