compress moreGame images

--- a/src/styles/MoreGames.css
+++ b/src/styles/MoreGames.css
@@ -16,21 +16,21 @@
 }
 
 .blobble {
-  background-image: url("../images/moreGames/blobble.png");
+  background-image: url("../images/moreGames/blobble.webp");
 }
 
 .lexlet {
-  background-image: url("../images/moreGames/lexlet.png");
+  background-image: url("../images/moreGames/lexlet.webp");
 }
 
 .wordfall {
-  background-image: url("../images/moreGames/wordfall.png");
+  background-image: url("../images/moreGames/wordfall.webp");
 }
 
 .gribbles {
-  background-image: url("../images/moreGames/gribbles.png");
+  background-image: url("../images/moreGames/gribbles.webp");
 }
 
 .logicGrid {
-  background-image: url("../images/moreGames/logicGrid.png");
+  background-image: url("../images/moreGames/logicGrid.webp");
 }
