--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -1,6 +1,6 @@
 .settings {
   text-align: center;
-  overflow: scroll;
+  overflow: auto;
   font-size: calc(var(--default-font-size) * 0.75);
   justify-items: center;
   align-items: center;
