--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -83,6 +83,7 @@ button:disabled {
 
 .infoText {
   margin: 2vmax;
+  font-size: calc(var(--default-font-size) * 0.6);
 }
 
 .info a {
@@ -427,7 +428,7 @@ body:has(#drag-group) {
   background-repeat: no-repeat;
   background-size: contain;
   display: inline-block;
-  width: 40%;
+  width: 57%;
   max-width: 180px;
   aspect-ratio: 3 / 1;
   margin-bottom: 10%;
@@ -439,4 +440,17 @@ body:has(#drag-group) {
 
 #appleAppStore {
   background-image: url("../images/appStores/apple_black.svg");
+}
+
+#pwa {
+  border: 1px solid rgb(255 255 255 / 70%);
+  background-color: black;
+  color: white;
+  box-sizing: border-box;
+  font-size: clamp(10px, 8vw, 16px);
+}
+
+ol,
+ul {
+  text-align: left;
 }
