use shared install components

--- a/src/styles/ControlBar.css
+++ b/src/styles/ControlBar.css
@@ -115,7 +115,7 @@
 }
 
 #installIcon {
-  background-image: url("../images/icons/install.svg");
+  background-image: url("@skedwards88/shared-components/src//images/icons/install.svg");
 }
 
 #playIcon {
