--- a/src/styles/LargeScreen.css
+++ b/src/styles/LargeScreen.css
@@ -27,7 +27,8 @@
   }
 
   #controls,
-  #exitDaily {
+  #exitDaily,
+  #adventureBar {
     flex-direction: column;
     border: solid var(--light-color);
     border-width: 0 2px 0 0;
@@ -36,7 +37,9 @@
     width: calc(var(--default-box-size) * 1.5);
   }
 
-  #exitDailyButton {
+  #exitDailyButton,
+  #exitAdventureIcon,
+  #adventureLevel {
     transform: rotate(270deg);
     width: fit-content;
     white-space: nowrap;
